[package]
name = "memselect"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
description = "No-std compatible memoizing selectors"
repository = "https://github.com/NeoLegends/memselect"
keywords = ["memoization", "selectors", "reselect"]
categories = ["caching", "no-std"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "NeoLegends/memselect" }
